infrastructure/security/vault-consul/consul/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: consul
  namespace: vault-system
  labels:
    traefik2: "true"
  annotations:
    kubernetes.io/ingress.class: cert
    #traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-dns01-provider: route53
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: consul.decort.tech
    http:
      paths:
      - path: /cert-placeholder
        backend:
          serviceName: consul
          servicePort: 8500
  tls:
  - hosts:
    - consul.decort.tech
    secretName: consul-cert  
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: consul-route
  namespace: vault-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`consul.decort.tech`)
      kind: Rule
      services:
        - name: consul
          port: 8500
      middlewares:
        - name: consul-security
        - name: traefik-auth
  tls:
    secretName: consul-cert
